Adjusted main tag alignments and justifications so user info would display correctly

--- a/my_habits.css
+++ b/my_habits.css
@@ -1,7 +1,6 @@
 main {
     text-align: start;
-    align-items: start;
-    justify-content: start;
+    align-items: normal;
 }
 
 h2 {
